--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,10 +33,14 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/tESTMDI
 excludes=
+file.reference.jcalendar-1.4.jar=D:\\donotdel\\Study\\jcalendar-1.4.jar
+file.reference.mssql-jdbc-11.2.0.jre17.jar=D:\\donotdel\\Study\\mssql-jdbc-11.2.0.jre17.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.mssql-jdbc-11.2.0.jre17.jar}:\
+    ${file.reference.jcalendar-1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
